<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GuessGenderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

    <ImageView
        android:id="@+id/iv_male"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon_character"
        android:src="@drawable/male_one"
        app:layout_constraintStart_toStartOf="@id/tv_label_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/male"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="@id/iv_male"
        app:layout_constraintStart_toStartOf="@id/iv_male"
        app:layout_constraintTop_toBottomOf="@id/iv_male" />

    <ImageView
        android:id="@+id/iv_female"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon_character"
        android:src="@drawable/female_two"
        app:layout_constraintEnd_toEndOf="@id/tv_label_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/female"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="@id/iv_female"
        app:layout_constraintStart_toStartOf="@id/iv_female"
        app:layout_constraintTop_toBottomOf="@id/iv_female" />

    <TextView
        android:id="@+id/tv_label_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/label_input_name"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_male" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_input_name"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/icon_character"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/textField"
        app:layout_constraintStart_toStartOf="@id/textField"
        app:layout_constraintTop_toBottomOf="@id/textField"
        tools:src="@drawable/male_one" />

    <TextView
        android:id="@+id/tv_result_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/iv_result"
        app:layout_constraintStart_toStartOf="@id/iv_result"
        app:layout_constraintTop_toBottomOf="@id/iv_result" />

    <TextView
        android:id="@+id/tv_result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tv_result_gender"
        app:layout_constraintStart_toStartOf="@id/tv_result_gender"
        app:layout_constraintTop_toBottomOf="@id/tv_result_gender" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>